fix(style): overflowed content bottom

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 body {
   background: #171717;
+  bottom: env(safe-area-inset-bottom, 0);
 }
 .container {
   background-image: linear-gradient(#051327, #000);
